...
    case year, life

    var id: String { rawValue }

    var title: String {
        switch self {
        case .year: String(localized: "올해")
        case .life: String(localized: "인생")
        }
    }

    static var typeDisplayRepresentation: TypeDisplayRepresentation { "배경화면 종류" }
    static var caseDisplayRepresentations: [WallpaperKind: DisplayRepresentation] {
...
